pkg/lang/testdata/ub/constraints/valid/check-predicate-for-each-map.ub
constraints: [
  {
    kind:      predicate
    @for-each: input.configs
    when:      true
    require:   @each.value.on == true
    message:   'must be on'
  },
]
