pkg/lang/testdata/ub/constraints/invalid/for-each-non-object-level.ub
constraints: [
  {
    kind: predicate
    @for-each: [ var.rules, ]
    when:    true
    require: true
  },
]
